// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`click option 1`] = `
<div class="buri-dropdown-menu buri-hairline--top-bottom">
  <div role="button" tabindex="0" class="buri-dropdown-menu__item"><span class="buri-dropdown-menu__title"><div class="buri-ellipsis">B</div></span></div>
  <div role="button" tabindex="0" class="buri-dropdown-menu__item"><span class="buri-dropdown-menu__title"><div class="buri-ellipsis">B</div></span></div>
  <div>
    <div class="buri-dropdown-item buri-dropdown-item--down" style="z-index: 10; top: 0px;">
      <div class="buri-overlay" style="z-index: 2013; animation-duration: 0.2s; position: absolute;" name="buri-fade"></div>
      <div class="buri-popup buri-popup--top buri-dropdown-item__content" style="transition-duration: 0.2s; display: none; z-index: 2014;" name="buri-popup-slide-top">
        <div role="button" tabindex="0" class="buri-cell buri-cell--clickable buri-dropdown-item__option">
          <div class="buri-cell__title"><span>A</span></div>
        </div>
        <div role="button" tabindex="0" class="buri-cell buri-cell--clickable buri-dropdown-item__option buri-dropdown-item__option--active">
          <div class="buri-cell__title"><span>B</span></div>
          <div class="buri-cell__value"><i class="buri-icon buri-icon-success buri-dropdown-item__icon">
              <!----></i></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div class="buri-dropdown-item buri-dropdown-item--down" style="z-index: 10; top: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`close-on-click-outside 1`] = `
<div class="buri-dropdown-menu buri-hairline--top-bottom">
  <div role="button" tabindex="0" class="buri-dropdown-menu__item"><span class="buri-dropdown-menu__title"><div class="buri-ellipsis">A</div></span></div>
  <div role="button" tabindex="0" class="buri-dropdown-menu__item"><span class="buri-dropdown-menu__title"><div class="buri-ellipsis">A</div></span></div>
  <div>
    <div class="buri-dropdown-item buri-dropdown-item--down" style="z-index: 10; top: 0px;">
      <div class="buri-popup buri-popup--top buri-dropdown-item__content" style="transition-duration: 0.2s; display: none;" name="buri-popup-slide-top">
        <div role="button" tabindex="0" class="buri-cell buri-cell--clickable buri-dropdown-item__option buri-dropdown-item__option--active">
          <div class="buri-cell__title"><span>A</span></div>
          <div class="buri-cell__value"><i class="buri-icon buri-icon-success buri-dropdown-item__icon">
              <!----></i></div>
        </div>
        <div role="button" tabindex="0" class="buri-cell buri-cell--clickable buri-dropdown-item__option">
          <div class="buri-cell__title"><span>B</span></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div class="buri-dropdown-item buri-dropdown-item--down" style="z-index: 10; top: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`destroy one item 1`] = `
<div class="buri-dropdown-menu buri-hairline--top-bottom">
  <div role="button" tabindex="0" class="buri-dropdown-menu__item"><span class="buri-dropdown-menu__title"><div class="buri-ellipsis">A</div></span></div>
  <!---->
  <div>
    <div class="buri-dropdown-item buri-dropdown-item--down" style="z-index: 10; top: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`didn\`t find matched option 1`] = `
<div class="buri-dropdown-menu buri-hairline--top-bottom">
  <div role="button" tabindex="0" class="buri-dropdown-menu__item"><span class="buri-dropdown-menu__title"><div class="buri-ellipsis"></div></span></div>
  <div role="button" tabindex="0" class="buri-dropdown-menu__item"><span class="buri-dropdown-menu__title"><div class="buri-ellipsis"></div></span></div>
  <div>
    <div class="buri-dropdown-item buri-dropdown-item--down" style="z-index: 10; top: 0px; display: none;">
      <!---->
    </div>
  </div>
  <div>
    <div class="buri-dropdown-item buri-dropdown-item--down" style="z-index: 10; top: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`direction up 1`] = `
<div class="buri-dropdown-menu buri-hairline--top-bottom">
  <div role="button" tabindex="0" class="buri-dropdown-menu__item"><span class="buri-dropdown-menu__title buri-dropdown-menu__title--down"><div class="buri-ellipsis">A</div></span></div>
  <div role="button" tabindex="0" class="buri-dropdown-menu__item"><span class="buri-dropdown-menu__title buri-dropdown-menu__title--down"><div class="buri-ellipsis">A</div></span></div>
  <div>
    <div class="buri-dropdown-item buri-dropdown-item--up" style="z-index: 10; bottom: 0px; display: none;">
      <!---->
    </div>
  </div>
  <div>
    <div class="buri-dropdown-item buri-dropdown-item--up" style="z-index: 10; bottom: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`direction up 2`] = `
<div class="buri-dropdown-menu buri-hairline--top-bottom">
  <div role="button" tabindex="0" class="buri-dropdown-menu__item"><span class="buri-dropdown-menu__title buri-dropdown-menu__title--active"><div class="buri-ellipsis">A</div></span></div>
  <div role="button" tabindex="0" class="buri-dropdown-menu__item"><span class="buri-dropdown-menu__title buri-dropdown-menu__title--down"><div class="buri-ellipsis">A</div></span></div>
  <div>
    <div class="buri-dropdown-item buri-dropdown-item--up" style="z-index: 10; bottom: 1000px;">
      <div class="buri-popup buri-popup--bottom buri-dropdown-item__content" style="transition-duration: 0.2s;" name="buri-popup-slide-bottom">
        <div role="button" tabindex="0" class="buri-cell buri-cell--clickable buri-dropdown-item__option buri-dropdown-item__option--active">
          <div class="buri-cell__title"><span>A</span></div>
          <div class="buri-cell__value"><i class="buri-icon buri-icon-success buri-dropdown-item__icon">
              <!----></i></div>
        </div>
        <div role="button" tabindex="0" class="buri-cell buri-cell--clickable buri-dropdown-item__option">
          <div class="buri-cell__title"><span>B</span></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div class="buri-dropdown-item buri-dropdown-item--up" style="z-index: 10; bottom: 1000px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`disable close-on-click-outside 1`] = `
<div class="buri-dropdown-menu buri-hairline--top-bottom">
  <div role="button" tabindex="0" class="buri-dropdown-menu__item"><span class="buri-dropdown-menu__title buri-dropdown-menu__title--active buri-dropdown-menu__title--down"><div class="buri-ellipsis">A</div></span></div>
  <div role="button" tabindex="0" class="buri-dropdown-menu__item"><span class="buri-dropdown-menu__title"><div class="buri-ellipsis">A</div></span></div>
  <div>
    <div class="buri-dropdown-item buri-dropdown-item--down" style="z-index: 10; top: 0px;">
      <div class="buri-popup buri-popup--top buri-dropdown-item__content" style="transition-duration: 0.2s;" name="buri-popup-slide-top">
        <div role="button" tabindex="0" class="buri-cell buri-cell--clickable buri-dropdown-item__option buri-dropdown-item__option--active">
          <div class="buri-cell__title"><span>A</span></div>
          <div class="buri-cell__value"><i class="buri-icon buri-icon-success buri-dropdown-item__icon">
              <!----></i></div>
        </div>
        <div role="button" tabindex="0" class="buri-cell buri-cell--clickable buri-dropdown-item__option">
          <div class="buri-cell__title"><span>B</span></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div class="buri-dropdown-item buri-dropdown-item--down" style="z-index: 10; top: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`disable dropdown item 1`] = `
<div class="buri-dropdown-menu buri-hairline--top-bottom">
  <div role="button" tabindex="-1" class="buri-dropdown-menu__item buri-dropdown-menu__item--disabled"><span class="buri-dropdown-menu__title"><div class="buri-ellipsis">A</div></span></div>
  <div>
    <div class="buri-dropdown-item buri-dropdown-item--down" style="z-index: 10; top: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`render option icon 1`] = `
<div class="buri-dropdown-menu buri-hairline--top-bottom">
  <div role="button" tabindex="0" class="buri-dropdown-menu__item"><span class="buri-dropdown-menu__title buri-dropdown-menu__title--active buri-dropdown-menu__title--down"><div class="buri-ellipsis">A</div></span></div>
  <div role="button" tabindex="0" class="buri-dropdown-menu__item"><span class="buri-dropdown-menu__title"><div class="buri-ellipsis">A</div></span></div>
  <div>
    <div class="buri-dropdown-item buri-dropdown-item--down" style="z-index: 10; top: 0px;">
      <div class="buri-popup buri-popup--top buri-dropdown-item__content" style="transition-duration: 0.2s;" name="buri-popup-slide-top">
        <div role="button" tabindex="0" class="buri-cell buri-cell--clickable buri-dropdown-item__option buri-dropdown-item__option--active"><i class="buri-icon buri-icon-success buri-cell__left-icon">
            <!----></i>
          <div class="buri-cell__title"><span>A</span></div>
          <div class="buri-cell__value"><i class="buri-icon buri-icon-success buri-dropdown-item__icon">
              <!----></i></div>
        </div>
        <div role="button" tabindex="0" class="buri-cell buri-cell--clickable buri-dropdown-item__option"><i class="buri-icon buri-icon-success buri-cell__left-icon">
            <!----></i>
          <div class="buri-cell__title"><span>B</span></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div class="buri-dropdown-item buri-dropdown-item--down" style="z-index: 10; top: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`show dropdown item 1`] = `
<div class="buri-dropdown-menu buri-hairline--top-bottom">
  <div role="button" tabindex="0" class="buri-dropdown-menu__item"><span class="buri-dropdown-menu__title buri-dropdown-menu__title--active buri-dropdown-menu__title--down"><div class="buri-ellipsis">A</div></span></div>
  <div role="button" tabindex="0" class="buri-dropdown-menu__item"><span class="buri-dropdown-menu__title"><div class="buri-ellipsis">A</div></span></div>
  <div>
    <div class="buri-dropdown-item buri-dropdown-item--down" style="z-index: 10; top: 0px;">
      <div class="buri-popup buri-popup--top buri-dropdown-item__content" style="transition-duration: 0.2s;" name="buri-popup-slide-top">
        <div role="button" tabindex="0" class="buri-cell buri-cell--clickable buri-dropdown-item__option buri-dropdown-item__option--active">
          <div class="buri-cell__title"><span>A</span></div>
          <div class="buri-cell__value"><i class="buri-icon buri-icon-success buri-dropdown-item__icon">
              <!----></i></div>
        </div>
        <div role="button" tabindex="0" class="buri-cell buri-cell--clickable buri-dropdown-item__option">
          <div class="buri-cell__title"><span>B</span></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div class="buri-dropdown-item buri-dropdown-item--down" style="z-index: 10; top: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`show dropdown item 2`] = `
<div class="buri-dropdown-menu buri-hairline--top-bottom">
  <div role="button" tabindex="0" class="buri-dropdown-menu__item"><span class="buri-dropdown-menu__title"><div class="buri-ellipsis">A</div></span></div>
  <div role="button" tabindex="0" class="buri-dropdown-menu__item"><span class="buri-dropdown-menu__title buri-dropdown-menu__title--active buri-dropdown-menu__title--down"><div class="buri-ellipsis">A</div></span></div>
  <div>
    <div class="buri-dropdown-item buri-dropdown-item--down" style="z-index: 10; top: 0px;">
      <div class="buri-popup buri-popup--top buri-dropdown-item__content" style="transition-duration: 0s; display: none;" name="buri-popup-slide-top">
        <div role="button" tabindex="0" class="buri-cell buri-cell--clickable buri-dropdown-item__option buri-dropdown-item__option--active">
          <div class="buri-cell__title"><span>A</span></div>
          <div class="buri-cell__value"><i class="buri-icon buri-icon-success buri-dropdown-item__icon">
              <!----></i></div>
        </div>
        <div role="button" tabindex="0" class="buri-cell buri-cell--clickable buri-dropdown-item__option">
          <div class="buri-cell__title"><span>B</span></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div class="buri-dropdown-item buri-dropdown-item--down" style="z-index: 10; top: 0px;">
      <div class="buri-popup buri-popup--top buri-dropdown-item__content" style="transition-duration: 0.2s;" name="buri-popup-slide-top">
        <div role="button" tabindex="0" class="buri-cell buri-cell--clickable buri-dropdown-item__option buri-dropdown-item__option--active">
          <div class="buri-cell__title"><span>A</span></div>
          <div class="buri-cell__value"><i class="buri-icon buri-icon-success buri-dropdown-item__icon">
              <!----></i></div>
        </div>
        <div role="button" tabindex="0" class="buri-cell buri-cell--clickable buri-dropdown-item__option">
          <div class="buri-cell__title"><span>B</span></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`show dropdown item 3`] = `
<div class="buri-dropdown-menu buri-hairline--top-bottom">
  <div role="button" tabindex="0" class="buri-dropdown-menu__item"><span class="buri-dropdown-menu__title"><div class="buri-ellipsis">A</div></span></div>
  <div role="button" tabindex="0" class="buri-dropdown-menu__item"><span class="buri-dropdown-menu__title"><div class="buri-ellipsis">A</div></span></div>
  <div>
    <div class="buri-dropdown-item buri-dropdown-item--down" style="z-index: 10; top: 0px;">
      <div class="buri-popup buri-popup--top buri-dropdown-item__content" style="transition-duration: 0s; display: none;" name="buri-popup-slide-top">
        <div role="button" tabindex="0" class="buri-cell buri-cell--clickable buri-dropdown-item__option buri-dropdown-item__option--active">
          <div class="buri-cell__title"><span>A</span></div>
          <div class="buri-cell__value"><i class="buri-icon buri-icon-success buri-dropdown-item__icon">
              <!----></i></div>
        </div>
        <div role="button" tabindex="0" class="buri-cell buri-cell--clickable buri-dropdown-item__option">
          <div class="buri-cell__title"><span>B</span></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div class="buri-dropdown-item buri-dropdown-item--down" style="z-index: 10; top: 0px;">
      <div class="buri-popup buri-popup--top buri-dropdown-item__content" style="transition-duration: 0.2s; display: none;" name="buri-popup-slide-top">
        <div role="button" tabindex="0" class="buri-cell buri-cell--clickable buri-dropdown-item__option buri-dropdown-item__option--active">
          <div class="buri-cell__title"><span>A</span></div>
          <div class="buri-cell__value"><i class="buri-icon buri-icon-success buri-dropdown-item__icon">
              <!----></i></div>
        </div>
        <div role="button" tabindex="0" class="buri-cell buri-cell--clickable buri-dropdown-item__option">
          <div class="buri-cell__title"><span>B</span></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`title prop 1`] = `
<div class="buri-dropdown-menu buri-hairline--top-bottom">
  <div role="button" tabindex="0" class="buri-dropdown-menu__item"><span class="buri-dropdown-menu__title"><div class="buri-ellipsis">Title</div></span></div>
  <div role="button" tabindex="0" class="buri-dropdown-menu__item"><span class="buri-dropdown-menu__title"><div class="buri-ellipsis">Title</div></span></div>
  <div>
    <div class="buri-dropdown-item buri-dropdown-item--down" style="z-index: 10; top: 0px; display: none;">
      <!---->
    </div>
  </div>
  <div>
    <div class="buri-dropdown-item buri-dropdown-item--down" style="z-index: 10; top: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`title slot 1`] = `
<div class="buri-dropdown-menu buri-hairline--top-bottom">
  <div role="button" tabindex="0" class="buri-dropdown-menu__item"><span class="buri-dropdown-menu__title"><div class="buri-ellipsis">
            Custom Title
          </div></span></div>
  <div>
    <div class="buri-dropdown-item buri-dropdown-item--down" style="z-index: 10; top: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`toggle method 1`] = `
<div class="buri-dropdown-menu buri-hairline--top-bottom">
  <div role="button" tabindex="0" class="buri-dropdown-menu__item"><span class="buri-dropdown-menu__title buri-dropdown-menu__title--active buri-dropdown-menu__title--down"><div class="buri-ellipsis"></div></span></div>
  <div>
    <div class="buri-dropdown-item buri-dropdown-item--down" style="z-index: 10; top: 0px;">
      <div class="buri-overlay" style="z-index: 2017; animation-duration: 0s; position: absolute;" name="buri-fade"></div>
      <div class="buri-popup buri-popup--top buri-dropdown-item__content" style="transition-duration: 0s; z-index: 2018;" name="buri-popup-slide-top"></div>
    </div>
  </div>
</div>
`;

exports[`toggle method 2`] = `
<div class="buri-dropdown-menu buri-hairline--top-bottom">
  <div role="button" tabindex="0" class="buri-dropdown-menu__item"><span class="buri-dropdown-menu__title"><div class="buri-ellipsis"></div></span></div>
  <div>
    <div class="buri-dropdown-item buri-dropdown-item--down" style="z-index: 10; top: 0px;">
      <div class="buri-popup buri-popup--top buri-dropdown-item__content" style="transition-duration: 0s; z-index: 2018; display: none;" name="buri-popup-slide-top"></div>
    </div>
  </div>
</div>
`;
